enhancements: settings, query, layout